# wgrd-modding-suite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ci-build.sh  file_tree.cpp  file_tree.h  files.cpp  files.h  logger.h  main.cpp  maingui.cpp  maingui.hpp  ndftransactions.cpp  ndftransactions.hpp  requirements.txt  start_modding_suite.bat  wgrd_files.cpp  wgrd_files.h  workspace.cpp  workspace.hpp
.github/workflows/: build_cmake.yml
modules/: FindEpoxy.cmake  FindGLFW3.cmake
po/: german.po
src/: file_tree.cpp  file_tree.h  file_tree.hpp  helpers.hpp  imgui_helpers.cpp  imgui_helpers.hpp  logger.h  main.cpp  maingui.cpp  maingui.hpp  ndftransactions.cpp  ndftransactions.hpp  threadpool.hpp  wgrd_files.cpp  wgrd_files.h  workspace.cpp  workspace.hpp
src/files/: configs.hpp  dic.cpp  dic.hpp  edat.cpp  edat.hpp  ess.cpp  ess.hpp  file.cpp  file.hpp  files.cpp  files.hpp  ndfbin.cpp  ndfbin.hpp  ppk.cpp  ppk.hpp  scenario.cpp  scenario.hpp  sformat.cpp  sformat.hpp  tgv.cpp  tgv.hpp
tests/: generator.cpp
